Fixing problem on mobile

--- a/main.css
+++ b/main.css
@@ -21,6 +21,11 @@
 .Intro {
     text-align: center;
     color: black;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    clear: center;
 }
 header {
   background-image: url(https://images.unsplash.com/photo-1486707471592-8e7eb7e36f78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2185&q=80);
@@ -120,13 +125,6 @@ figure {
   padding: 0px;
   margin:  0px;
 }
-
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
   .contact {
       text-align: center;
   }
